# BasicVSCode

./: CMakeLists.txt  README.md
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: teste.h
make/: CMakeLists.txt
src/: main.cpp  teste.cpp
